--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* general styles */
 body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
@@ -16,6 +17,21 @@ p {
     line-height: 26px;
 }
 
+.content-container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.button {
+    text-decoration: none;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 10px 30px;
+    border-radius: 6px;
+    width: fit-content;
+}
+
+/* header */
 .header {
     background-color: #1F2937;
     position: fixed;
@@ -51,6 +67,7 @@ p {
     margin: 0;
 }
 
+/* hero */
 .hero {
     background-color: #1F2937;
 }
@@ -88,6 +105,7 @@ p {
     color: #E5E7EB;
 }
 
+/* main sections */
 .section-padding  {
     padding: 100px 40px;
 }
@@ -100,20 +118,7 @@ p {
     background-color: #E5E7EB;
 }
 
-.content-container {
-    max-width: 1440px;
-    margin: 0 auto;
-}
-
-.button {
-    text-decoration: none;
-    background-color: #3882F6;
-    color: #F9FAF8;
-    padding: 10px 30px;
-    border-radius: 6px;
-    width: fit-content;
-}
-
+/* footer */
 .footer {
     background-color: #1F2937;
     color: #E5E7EB;
