--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* general styles */
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 0;
     margin: 0;
 }
@@ -12,14 +12,39 @@ h1 {
     margin: 0; 
 }
 
+h2 {
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+    margin-top: 0;
+}
+
 p {
     font-size: 18px;
     line-height: 26px;
+    color: #1F2937;
+}
+
+.center-align {
+    text-align: center;
 }
 
 .content-container {
-    max-width: 1440px;
+    max-width: 1000px;
     margin: 0 auto;
+}
+
+.inner-container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 40px;
+    align-items: center;
 }
 
 .button {
@@ -29,6 +54,27 @@ p {
     padding: 10px 30px;
     border-radius: 6px;
     width: fit-content;
+}
+
+.button--outline {
+    border: 3px solid #F9FAF8;
+}
+
+img {
+    display: block;
+    width: 100%;
+}
+
+.fill-white {
+    background-color: #ffffff;
+}
+
+.fill-grey {
+    background-color: #E5E7EB;
+}
+
+.fill-secondary {
+    background-color: #3882F6;
 }
 
 /* header */
@@ -73,7 +119,7 @@ p {
 }
 
 .hero .content-container {
-    padding: 100px 40px;
+    padding: 150px 40px;
     gap: 40px;
     display: flex;
     flex-direction: row;
@@ -101,7 +147,10 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #8a8a8a;
+    background-color: #6d747d;
+}
+
+.hero-image p {
     color: #E5E7EB;
 }
 
@@ -110,21 +159,64 @@ p {
     padding: 100px 40px;
 }
 
-.fill-white {
-    background-color: #ffffff;
+/* testimonial */
+.column img {
+    border: 4px solid #3882F6;
+    border-radius: 20px;
+    min-height: 175px;
 }
 
-.fill-grey {
-    background-color: #E5E7EB;
+p.testimonial {
+    font-size: 36px;
+    line-height: 46px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+p.testimonial-author {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 700;
+    text-align: right;
+}
+
+.call-to-action {
+    max-width: 1200px;
+    padding: 40px;
+    border-radius: 20px;
+}
+
+.call-to-action h3 {
+    font-size: 24px;
+    color: #F9FAF8;
+    margin-bottom: 0;
+}
+
+.call-to-action p {
+    color: #E5E7EB;
+    margin-top: 0;
+}
+
+.call-to-action .column.col-75 {
+    flex: 0 1 75%;
+}
+
+.call-to-action .column.col-25 {
+    display: flex;
+    flex: 0 1 25%;
+    justify-content: end;
 }
 
 /* footer */
 .footer {
     background-color: #1F2937;
-    color: #E5E7EB;
     text-align: center;
 }
 
 .footer .content-container {
     padding: 20px 40px;
+}
+
+.footer p {
+    color: #E5E7EB;
 }
